--- a/src/main/resources/tab_wyn.fxml
+++ b/src/main/resources/tab_wyn.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
 
 <AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.SceneController">
@@ -12,5 +15,6 @@
           <TableColumn prefWidth="75.0" text="Liczba wygranych" />
         </columns>
       </TableView>
+       <Button layoutX="800.0" layoutY="1000.0" mnemonicParsing="false" onAction="#switch_to_main_menu" prefHeight="100.0" prefWidth="230.0" text="Powrót" />
    </children>
 </AnchorPane>
