--- a/src/main/resources/autorzy.fxml
+++ b/src/main/resources/autorzy.fxml
@@ -1,17 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.SceneController">
    <children>
-      <ImageView layoutX="1" layoutY="1" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView layoutX="1" layoutY="1" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView layoutX="1" layoutY="1" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="1200" layoutY="100" pickOnBounds="true" preserveRatio="true">
+       <image>
+           <Image url="@assets/textures/tenor.gif" />
+       </image>
+   </ImageView>
+      <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="400" layoutY="100" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@assets/textures/tenor.gif" />
+          </image>
+      </ImageView>
+      <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="800" layoutY="100" pickOnBounds="true" preserveRatio="true">
+          <image>
+              <Image url="@assets/textures/tenor.gif" />
+          </image>
+      </ImageView>
        <Button layoutX="800.0" layoutY="900.0" mnemonicParsing="false" onAction="#switch_to_main_menu" prefHeight="100.0" prefWidth="230.0" text="Powrót" />
+      <TextField editable="false" layoutX="469.0" layoutY="277.0" text="Hubert Wilczyński">
+         <font>
+            <Font size="12.0" />
+         </font></TextField>
+      <TextField editable="false" layoutX="869.0" layoutY="277.0" text="Hubert Stojek">
+         <font>
+            <Font size="12.0" />
+         </font></TextField>
+      <TextField editable="false" layoutX="1269.0" layoutY="277.0" text="Andzrzej Raumiagi">
+         <font>
+            <Font size="12.0" />
+         </font></TextField>
    </children>
 </AnchorPane>
