KARTTY DZIALAJĄ AAAAAAAAAAAA

--- a/src/main/resources/main_menu.fxml
+++ b/src/main/resources/main_menu.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.SceneController">
    <children>
-      <Button layoutX="842.0" layoutY="400.0" mnemonicParsing="false" onAction="#switch_to_login" prefHeight="100.0" prefWidth="150.0" text="Start" />
+      <Button layoutX="842.0" layoutY="400.0" mnemonicParsing="false" onAction="#switch_to_game" prefHeight="100.0" prefWidth="150.0" text="Start" />
       <Button layoutX="825.0" layoutY="500.0" mnemonicParsing="false" onAction="#switch_to_settings" prefHeight="100.0" prefWidth="185.0" text="Ustawienia" />
       <Button layoutX="800.0" layoutY="600.0" mnemonicParsing="false" onAction="#switch_to_tab_wynik" prefHeight="100.0" prefWidth="230.0" text="Tabela Wyników" />
        <Button layoutX="800.0" layoutY="700.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="230.0" text="Personalizacja" />
