--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -50,3 +50,43 @@
     -fx-text-color: white;
     -fx-font-weight: bold;
 }
+.table-view .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header {
+    -fx-background-color: transparent;
+}
+.transparent-table {
+    -fx-background-color: transparent;
+}
+
+.transparent-table .column-header-background {
+    -fx-background-color: transparent;
+}
+
+.transparent-table .column-header-background .filler {
+    -fx-background-color: transparent;
+}
+
+.transparent-table .column-header {
+    -fx-background-color: transparent;
+}
+
+.transparent-table .table-cell {
+    -fx-text-fill: white;
+    -fx-background-color: transparent;
+}
+
+.transparent-table .column-header .label {
+    -fx-text-fill: white;
+}
+.table-column {
+    -fx-alignment: CENTER-LEFT;
+
+}
+
+.table-view .column-header .label {
+    -fx-alignment: CENTER-LEFT;
+    -fx-text-alignment: left;
+}
