--- a/src/main/resources/table.css
+++ b/src/main/resources/table.css
@@ -1,6 +1,6 @@
 /* table.css - zmodyfikowane ścieżki */
 .root {
-    /*-fx-background-image: url("assets/textures/wood.jpg");*/
+    -fx-background-image: url("assets/textures/wood.png");
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
