poprawione logowanie z hasłem oraz hashowanie hasła zmiana wyglądu panelu personalizuj

--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -8,18 +8,18 @@
 
 <AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.LoginController">
     <children>
-        <Text fill="#2eff00" layoutX="745.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Podaj nick" />
-        <TextField fx:id="loginTextField" layoutX="750.0" layoutY="333.0" prefWidth="300" />
+        <Text fill="#2eff00" layoutX="555.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Podaj nick" />
+        <TextField fx:id="loginTextField" layoutX="600.0" layoutY="333.0" prefWidth="300" />
 
         <!-- DODANE: Pole hasła -->
-        <Text fill="#2eff00" layoutX="745.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Podaj hasło" />
-        <PasswordField fx:id="passwordField" layoutX="750.0" layoutY="433.0" prefWidth="300" />
+        <Text fill="#2eff00" layoutX="550.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Podaj hasło" />
+        <PasswordField fx:id="passwordField" layoutX="600.0" layoutY="533.0" prefWidth="300" />
 
         <!-- DODANE: Etykieta błędu -->
-        <Label fx:id="errorLabel" layoutX="750.0" layoutY="500.0" textFill="red" visible="false" prefWidth="300" />
+        <Label fx:id="errorLabel" layoutX="700.0" layoutY="500.0" textFill="red" visible="false" prefWidth="300" />
 
-        <Button layoutX="750.0" layoutY="550.0" mnemonicParsing="false" onAction="#handlePlayButton" text="Graj" />
-        <Button layoutX="800.0" layoutY="900.0" mnemonicParsing="false" onAction="#switch_to_main_menu" prefHeight="100.0" prefWidth="230.0" text="Powrót" />
+        <Button layoutX="880.0" layoutY="650.0" mnemonicParsing="false" onAction="#handlePlayButton" text="Graj" />
+        <Button layoutX="550.0" layoutY="650.0" mnemonicParsing="false" onAction="#switch_to_main_menu" text="Powrót" />
 
         <ImageView fitHeight="300.0" fitWidth="300.0" layoutX="1600.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
             <image>
