--- a/src/main/resources/main_menu.fxml
+++ b/src/main/resources/main_menu.fxml
@@ -9,7 +9,7 @@
       <Button layoutX="842.0" layoutY="400.0" mnemonicParsing="false" onAction="#switch_to_game" prefHeight="100.0" prefWidth="150.0" text="Start" />
       <Button layoutX="825.0" layoutY="500.0" mnemonicParsing="false" onAction="#switch_to_settings" prefHeight="100.0" prefWidth="185.0" text="Ustawienia" />
       <Button layoutX="800.0" layoutY="600.0" mnemonicParsing="false" onAction="#switch_to_tab_wynik" prefHeight="100.0" prefWidth="230.0" text="Tabela Wyników" />
-       <Button layoutX="800.0" layoutY="700.0" mnemonicParsing="false" onAction="#switch_to_login" prefHeight="100.0" prefWidth="230.0" text="Personalizacja" />
+       <Button layoutX="800.0" layoutY="700.0" mnemonicParsing="false" onAction="#switch_to_login" prefHeight="100.0" prefWidth="230.0" text="Logowanie" />
        <Button layoutX="840.0" layoutY="800.0" mnemonicParsing="false" onAction="#switch_to_autorzy" prefHeight="100.0" prefWidth="150.0" text="Autorzy" />
        <Button layoutX="800.0" layoutY="900.0" mnemonicParsing="false" onAction="#turn_off" prefHeight="100.0" prefWidth="230.0" text="Wyjdź" />
       <ImageView fitHeight="170.0" fitWidth="120.0" layoutX="855.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
